Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3667

SSL Handhake read does not correctly handle EOF and error cases

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 5.2.0, 5.3.0
    • 5.3.1, 6.0.0
    • SSL
    • None

    Description

      Reported by esproul and postwait.

      The return value of SSLNetVConnection::read_raw_data() is being ignored. So EOF and errors are not terminated, but rather spin until the inactivity timeout is reached. EAGAIN is not being descheduled until more data is available.

      This results in higher CPU utilization and hitting the SSL_error() function much more than it needs to be hit.

      Attachments

        1. ts-3667.diff
          1 kB
          Susan Hinrichs

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: