TS-3667: SSL Handshake read does not correctly handle EOF and error cases.

(cherry picked from commit fb3bbbd4f716a8ac4399ff1edba1c8005610f7b1)